--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a:link,
+a :visited,
+a :hover,
+a :active {
+    text-decoration: none;
+    outline: 0;
+}
+
 body {
     margin: 0;
 }
@@ -12,6 +26,18 @@ img {
     border-style: none;
 }
 
+.overlay-bg {
+    background-color: rgba(0, 0, 0, 0.35);
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
 .flex-container {
     min-height: 100vh;
     background: #f3fbfb;
@@ -23,21 +49,23 @@ img {
 }
 
 .flex-item {
-    background-color: #51adc4;
+    display: flex;
+    flex-flow: column;
+    box-shadow: 1px 4px 4px rgba(8, 8, 8, 0.109);
+    border-radius: 10px;
+    margin: 0 15px;
 }
 
 .card {
     position: relative;
     display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
 }
 
 .card-img {
     border-top-left-radius: 10px;
+    position: relative;
 }
 
 .card-body {
@@ -45,23 +73,37 @@ img {
     flex: 1 1 auto;
     min-height: 1px;
     padding: 1.25rem;
-    background-color: #fff;
-    background-clip: border-box;
 }
 
 .tag {
-    background: #51adc4;
     padding: 0.375rem 0.75rem;
     border-radius: 50px;
     color: #fff;
     text-transform: uppercase;
     font-size: 8px;
+    letter-spacing: 1px;
+}
+
+.tag.technology {
+    background: #51adc4;
+}
+
+.tag.design {
+    background: #a196a6;
+}
+
+.tag.popular {
+    background: #b69697;
 }
 
 .card-title {
     font-size: 14px;
     margin-top: 10px;
     margin-bottom: auto;
+}
+
+.card-body {
+    padding-bottom: 10px;
 }
 
 .card-text {
@@ -72,8 +114,9 @@ img {
 .author {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    padding: 10px 0;
+    align-items: flex-end;
+    padding: 1.25rem;
+    height: 100%;
 }
 
 .author img {
@@ -87,7 +130,81 @@ img {
     flex: 1;
 }
 
+.author-detail a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 14px;
+}
+
 .author-detail p {
     margin-top: auto;
     margin-bottom: auto;
+    font-size: 12px;
+    color: #cccccc;
+}
+
+.logo {
+    display: inline-block;
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.navbar {
+    background-color: #ffffff;
+    box-shadow: 0 10px 20px -7px rgba(160, 44, 219, 0.07);
+}
+
+.navbar,
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding-left: 30px;
+    padding-right: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.nav-links {
+    display: flex;
+    list-style: none;
+}
+
+.nav-links .nav-item a {
+    text-decoration: none;
+    padding: 10px 15px;
+    font-size: 14px;
+    color: #7d7a9e;
+    cursor: pointer;
+}
+
+.footer nav {
+    padding: 5px auto;
+}
+
+.footer nav .footer-menu-item {
+    text-decoration: none;
+    color: #ffffff;
+    padding: 0px 10px;
+}
+
+.social-links {
+    display: flex;
+    justify-content: space-around;
+}
+
+.social-links img {
+    margin-left: 10px;
+    vertical-align: middle;
+    opacity: 0.6;
+    cursor: pointer;
+    transition: opacity 0.3s ease-in-out;
+    padding: 0px 10px;
+}
+
+.copyright {
+    font-size: 12px;
+    color: #bbb9d1;
 }
