--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ img {
 
 .footer nav .footer-menu-item {
     text-decoration: none;
-    color: #ffffff;
+    color: #242e4c;
     padding: 0px 10px;
 }
 
@@ -207,4 +207,187 @@ img {
 .copyright {
     font-size: 12px;
     color: #bbb9d1;
+}
+
+.footer {
+    height: 48px;
+    border-top: 1px solid #ebebf2;
+    font-size: 12px;
+    color: #7d7a9e;
+    background-color: #ffffff;
+    position: fixed;
+    bottom: 0;
+}
+
+.main-article aside {
+    flex: 0 0 430px;
+    background: beige;
+}
+
+.mainn {
+    display: flex;
+    flex: 1;
+    background: #f3f2f2;
+    padding: 20px;
+}
+
+.mainn>article {
+    flex: 1;
+    order: 1;
+}
+
+.mainn>aside {
+    flex: 0 0 30vw;
+    padding: 0 25px;
+    margin-bottom: 90px;
+}
+
+.mainn>aside {
+    order: 2;
+}
+
+.details {
+    display: flex;
+    flex-direction: column;
+}
+
+.primary-btn {
+    padding: 5px 15px 5px 40px;
+    background: url(./images/sare-icon.svg) no-repeat center left 15px;
+}
+
+.post-details {
+    display: inline-block;
+    margin-bottom: 15px;
+    width: 40%;
+    border: 1px solid rgba(125, 122, 158, 0.5);
+    color: #7d7a9e;
+}
+
+.post-title {
+    margin-bottom: 5px;
+    display: block;
+    font-weight: 700;
+}
+
+.post-date {
+    font-size: 14px;
+    opacity: 0.5;
+    margin-bottom: 10px;
+}
+
+.tag-container {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.tag-container .tag {
+    border-radius: 10px;
+    border: 1px solid #ebebf2;
+    padding: 7px 10px;
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    color: #7d7a9e;
+    background-color: #ffffff;
+    transition: all 0.3s ease-in-out;
+}
+
+.post-wrapper-container {
+    margin-bottom: 25px;
+    width: 100%;
+    height: auto;
+    border: 1px solid #bbb9d1;
+    border-radius: 5px;
+}
+
+.post-wrapper-container-img {
+    width: 100%;
+    height: 200px;
+    border-radius: 5px 5px 0 0;
+    position: relative;
+}
+
+.post-img {
+    height: 100%;
+    width: 100%;
+    object-position: center;
+    object-fit: cover;
+    border: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 5px 5px 0 0;
+    font-weight: 900;
+}
+
+.post-details-container {
+    color: #5d698d;
+    text-align: center;
+    padding: 15px;
+    border-radius: 0 0 5px 5px;
+}
+
+.download-btn {
+    font-size: 16px;
+    padding: 20px 15px;
+    margin-bottom: 15px;
+    display: block;
+    background-image: linear-gradient(to right, #68e4bc 0%, #4ad0d1 99%);
+    border-radius: 5px;
+    font-weight: bold;
+    width: 100%;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    text-align: center;
+    color: #ffffff;
+    box-shadow: 0 12px 12px -11px #0db4afb8;
+    background-size: 200% auto;
+}
+
+.info-grey {
+    text-align: center;
+    max-width: 80%;
+    margin: 0 auto 25px;
+}
+
+.color-panel {
+    border-radius: 10px;
+    width: 100%;
+    background-color: #f7f7fc;
+    padding: 30px;
+}
+
+.panel-text {
+    text-align: center;
+    margin-bottom: 5px;
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.color-wrapper {
+    background-color: #ffffff;
+    border: 1px solid #ebebf2;
+    border-radius: 25px;
+    display: inline-block;
+    padding: 10px 15px 10px 40px;
+    position: relative;
+    margin-bottom: 20px;
+    cursor: pointer;
+    transition: border 0.3s ease-in-out;
+    min-width: 140px;
+}
+
+.color-wrapper:hover {
+    border: 1px solid #f775c1;
+}
+
+.color-preview {
+    width: 25px;
+    height: 25px;
+    border: 1px solid #ebebf2;
+    border-radius: 25px;
+    position: absolute;
+    top: 7px;
+    left: 7px;
 }
