--- a/style.css
+++ b/style.css
@@ -179,6 +179,8 @@ img {
 .navbar {
     background-color: #ffffff;
     box-shadow: 0 10px 20px -7px rgba(160, 44, 219, 0.07);
+    position: fixed;
+    z-index: 10;
 }
 
 .navbar,
@@ -334,7 +336,7 @@ img {
     position: relative;
 }
 
-.post-img {
+.post-wrapper-container-img img {
     height: 100%;
     width: 100%;
     object-position: center;
