--- a/style.css
+++ b/style.css
@@ -4,8 +4,21 @@
     box-sizing: border-box;
 }
 
-header {
-    padding: 0 20px 0 0;
+body {
+    margin: 0;
+}
+
+
+/* Helper CSS */
+
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+
+img {
+    vertical-align: middle;
+    border-style: none;
 }
 
 a:link,
@@ -16,18 +29,8 @@ a :active {
     outline: 0;
 }
 
-body {
-    margin: 0;
-}
-
-.img-fluid {
-    max-width: 100%;
-    height: auto;
-}
-
-img {
-    vertical-align: middle;
-    border-style: none;
+header {
+    padding: 0 20px 0 0;
 }
 
 .tag {
@@ -42,18 +45,6 @@ img {
     font-size: 16px !important;
 }
 
-.overlay-bg {
-    background-color: rgba(0, 0, 0, 0.35);
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
-
 .main-nav-open-menu-btn {
     display: none;
 }
@@ -62,118 +53,6 @@ img {
     height: 70px;
     width: 20px;
     background: url(./Images/menu-icon.svg) no-repeat center;
-}
-
-.flex-container {
-    /* min-height: 100vh; */
-    background: #f3fbfb;
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.flex-item {
-    display: flex;
-    flex-flow: column;
-    box-shadow: 1px 4px 4px rgba(8, 8, 8, 0.109);
-    border-radius: 10px;
-    margin: 0 15px;
-}
-
-.card {
-    position: relative;
-    display: -ms-flexbox;
-    min-width: 0;
-    word-wrap: break-word;
-}
-
-.card-img {
-    border-top-left-radius: 10px;
-    position: relative;
-}
-
-.card-body {
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    min-height: 1px;
-    padding: 1.25rem;
-}
-
-.tagg {
-    padding: 0.375rem 0.75rem;
-    border-radius: 50px;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 8px;
-    letter-spacing: 1px;
-}
-
-.tagg.technology {
-    background: #51adc4;
-}
-
-.tagg.design {
-    background: #a196a6;
-}
-
-.tagg.popular {
-    background: #b69697;
-}
-
-.card-title {
-    font-size: 14px;
-    margin-top: 10px;
-    margin-bottom: auto;
-}
-
-.card-body {
-    padding-bottom: 10px;
-}
-
-.card-text {
-    margin-bottom: auto;
-    font-size: 12px;
-}
-
-.author {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    padding: 1.25rem;
-    height: 100%;
-}
-
-.author img {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    margin-right: 15px;
-}
-
-.author-detail {
-    flex: 1;
-}
-
-.author-detail a {
-    text-decoration: none;
-    color: #000000;
-    font-size: 14px;
-}
-
-.author-detail p {
-    margin-top: auto;
-    margin-bottom: auto;
-    font-size: 12px;
-    color: #cccccc;
-}
-
-.logo {
-    display: inline-block;
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
 }
 
 .navbar {
@@ -207,6 +86,9 @@ img {
     color: #7d7a9e;
     cursor: pointer;
 }
+
+
+/* Footer */
 
 .footer nav {
     padding: 5px auto;
@@ -247,16 +129,14 @@ img {
     bottom: 0;
 }
 
-.main-article aside {
-    flex: 0 0 430px;
-    /* background: beige; */
-}
+
+/* MAINN */
 
 .mainn {
     display: flex;
     flex: 1;
     background: #ffffff;
-    padding: 20px;
+    padding: 30px;
 }
 
 .mainn>article {
@@ -273,6 +153,16 @@ img {
 .mainn>aside {
     order: 2;
 }
+
+
+/* ARTICLE */
+
+article img {
+    border-radius: 10px;
+}
+
+
+/* ASIDE */
 
 .details {
     display: flex;
