--- a/style.css
+++ b/style.css
@@ -29,8 +29,16 @@ a :active {
     outline: 0;
 }
 
+
+/* HEADER */
+
 header {
     padding: 0 20px 0 0;
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 .tag {
@@ -50,16 +58,14 @@ header {
 }
 
 .mobile-menu-icon {
-    height: 70px;
-    width: 20px;
+    height: 50px;
+    width: 30px;
     background: url(./Images/menu-icon.svg) no-repeat center;
 }
 
 .navbar {
     background-color: #ffffff;
     box-shadow: 0 10px 20px -7px rgba(160, 44, 219, 0.07);
-    position: fixed;
-    z-index: 10;
 }
 
 .navbar,
@@ -137,6 +143,7 @@ header {
     flex: 1;
     background: #ffffff;
     padding: 30px;
+    margin-top: 70px;
 }
 
 .mainn>article {
@@ -146,7 +153,7 @@ header {
 
 .mainn>aside {
     flex: 0 0 30vw;
-    padding: 20px 25px;
+    padding: 20px 20px;
     margin-bottom: 90px;
 }
 
@@ -323,9 +330,20 @@ article img {
     }
 }
 
+@media (min-width: 992px) {
+    .mainn>aside {
+        padding: 20px 20px;
+    }
+}
+
 @media (max-width: 991px) {
     .mainn {
         flex-direction: column;
+        margin-top: 100px;
+        padding: 0px;
+    }
+    .mainn>aside {
+        flex: 0 0 100vw;
     }
     .footer {
         flex-direction: column;
